Conexao com mongodb criada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
+server.port:8080
+
+
+
+#================Conexão databse mongodb==============
+spring.data.mongodb.uri="mongodb+srv://admin:admin123@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majority"
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=dbWhycry
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin312
+#=====================================================
+
+#=====================================================
 spring.datasource.url=jdbc:h2:mem:whycry
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+#=====================================================
