--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port:8080
-
+springdoc.show-actuator=true
+server.error.include-stacktrace=never
 
 #=====================================================
 #=====================================================
@@ -7,11 +8,7 @@ server.port:8080
 #=====================================================
 #=====================================================
 #========================Swagger======================
-
-
 #=====================================================
-
-
 #================Conexão databse mongodb==============
 spring.data.mongodb.uri="mongodb+srv://admin:admin123@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majority"
 spring.data.mongodb.host=localhost
@@ -19,9 +16,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=dbWhycry
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=admin312
-#=====================================================
-
-#=====================================================
+#======================JPA============================
 spring.datasource.url=jdbc:h2:mem:whycry
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
