Atualizando controllers e conexão mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ springdoc.show-actuator=true
 server.error.include-stacktrace=never
 
 #=====================================================
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 #=====================================================
 #=====================================================
 #=====================================================
@@ -10,16 +11,18 @@ server.error.include-stacktrace=never
 #========================Swagger======================
 #=====================================================
 #================Conexão databse mongodb==============
-spring.data.mongodb.uri="mongodb+srv://admin:admin123@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majority"
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://admin:admin312@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majorit
+#spring.data.mongodb.uri=mmongodb+srv://admin:admin312@dbwhycry.g1j98ut.mongodb.net/test
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=dbWhycry
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=admin312
 #======================JPA============================
-spring.datasource.url=jdbc:h2:mem:whycry
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.datasource.url=jdbc:h2:mem:whycry
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 #=====================================================
