--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,10 @@
 #spring:
 #  data:
 #      mongodb:
+##        authentication-database: admin
 #        username: admin
 #        password: admin312
-#        uri: mongodb+srv://admin:admin123@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majority
 #        database: dbWhycry
-#        host: 27017
-        
-
-#spring:
-#  data:
-#    mongodb:
-#      authentication-database: admin
-#      username: #your_root_user     (default->rootuser)
-#      password: #your_root_password (default->rootpass)
-#      database: #your_db_name
-#      port: #your_port              (default->27017)
-#      host: #your_host              (default->localhost)
+#        host: localhost
+#        port: 27017
+#        uri: mongodb+srv://admin:admin123@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majority
