--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,16 @@
 server.port:8080
 springdoc.show-actuator=true
 server.error.include-stacktrace=never
-
-#=====================================================
-#=====================================================
-#=====================================================
-#=====================================================
-#=====================================================
-#========================Swagger======================
-#=====================================================
-#================Conexão databse mongodb==============
-spring.data.mongodb.uri=mongodb+srv://admin:admin312@dbwhycry.g1j98ut.mongodb.net/?retryWrites=true&w=majorit
-#spring.data.mongodb.uri=mmongodb+srv://admin:admin312@dbwhycry.g1j98ut.mongodb.net/test
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+management.endpoints.web.exposure.include=*
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=dbWhycry
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=admin312
+management.endpoints.web.exposure.exclude=loggers
+#=====================================================
+#=====================================================
+#=====================================================
+#=====================================================
+#=====================================================
+#=====================================================
+#=====================================================
 #======================JPA============================
 #spring.datasource.url=jdbc:h2:mem:whycry
 #spring.jpa.show-sql=true
