--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-
-server.port:8080
+server.port=8080
 server.error.include-stacktrace=never
 #======================ACTUATOR=======================
 springdoc.show-actuator=true
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=loggers
+System.setProperty("https.protocols", "TLSv1,TLSv1.1,TLSv1.2");
 #======================MONGODB========================
 spring.data.mongodb.authentication-database=admin
 #=====================================================
