--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,8 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.4.5</version>
+			<version>1.4.5</version><!--$NO-MVN-MAN-VER$-->
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.4.5</version>
 		</dependency>
 
 	</dependencies>
@@ -84,7 +79,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>2.22.2</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<argLine>-Dhttps.protocols=TLSv1.1</argLine>
 					<skipTests>true</skipTests>
